export interface Person {
  wear(): void;
}
